Fiddled with options a touch but still no luck

--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "typescript": "^3.7.3"
   },
   "scripts": {
-    "start": "set PORT=3003 && react-scripts --inspect start --no-cache --runInBand",
+    "start": "set PORT=3003 && react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
